fix(AA): repair rating route
